Extrude Individual Faces + tweak in Last Operator panel = Crash #46647

Closed
opened 2015-10-30 21:21:24 +01:00 by Adam Friesen · 4 comments

System Information
Win 7 64 bit, an AMD 7xxx GPU. 16 gigs RAM, i7 third-gen CPU.

Blender Version
Broken: Blender hash 43bf78c
Worked: Blender hash aca4029

Short description of error
Tweaking the offset value for this operator crashes Blender 100 percent of the time

Exact steps for others to reproduce the error
It's so easy and so universal that a .blend file is not needed, just open Blender, switch to edit mode, switch to face select mode, perform an extrude individual faces operator on the cube, try to change the offset value. A guaranteed crash every single time.

This looks to be a regression from earlier in the 2.76 release cycle and is probably in 2.76a as well.

**System Information** Win 7 64 bit, an AMD 7xxx GPU. 16 gigs RAM, i7 third-gen CPU. **Blender Version** Broken: Blender hash 43bf78c Worked: Blender hash aca4029 **Short description of error** Tweaking the offset value for this operator crashes Blender 100 percent of the time **Exact steps for others to reproduce the error** It's so easy and so universal that a .blend file is not needed, just open Blender, switch to edit mode, switch to face select mode, perform an *extrude individual faces* operator on the cube, try to change the offset value. A guaranteed crash every single time. This looks to be a regression from earlier in the 2.76 release cycle and is probably in 2.76a as well.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

This issue was referenced by 37fbabc64b

This issue was referenced by 37fbabc64bb80fe96fe0925c39db397c4bdf25c5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46647
No description provided.