Fix T46647: Crash when using redo panel after extrude individual faces

Caused by rBe0c60985b6.